--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,15 +1,15 @@
 <p-dialog [header]="'ยืนยันไม่อนุมัติ'" [(visible)]="modalConfirmReject" [position]="'top'" [modal]="true"
-[style]="{minWidth: '300px'}" [baseZIndex]="10000" [draggable]="false" [resizable]="false">
+  [style]="{minWidth: '300px'}" [baseZIndex]="10000" [draggable]="false" [resizable]="false">
   <div class="modal-body">
-    <label>เหตุผล</label>
+    <label>{{ 'Home.Reason' | translate}}</label>
     <textarea class="form-control" id="reasonReject" rows="6" placeholder="" [(ngModel)]="reasonReject"></textarea>
   </div>
   <p-footer>
     <fieldset class="form-group position-relative has-icon-left mb-0">
       <button type="button" id="edit-contact-item" class="btn btn-warning edit-contact-item" data-dismiss="modal"
-      (click)="saveCancelConfirm()">
+        (click)="saveCancelConfirm()">
         <i class="fa fa-paper-plane-o d-lg-none"></i>
-        <span class="d-lg-block">Reject</span>
+        <span class="d-lg-block">{{ 'Home.Rejected' | translate}}</span>
       </button>
     </fieldset>
   </p-footer>
@@ -28,7 +28,7 @@
       <div class="col-md-12">
         <div class="card">
           <div class="card-header">
-            <h4 class="card-title" id="basic-layout-form">Work Calendar</h4>
+            <h4 class="card-title" id="basic-layout-form">{{ 'Home.WorkCalendar' | translate}}</h4>
             <!-- <a class="heading-elements-toggle"><i class="fa fa-ellipsis-v font-medium-3"></i></a> -->
           </div>
           <div class="card-content collapse show">
@@ -49,7 +49,7 @@
       <div class="col-md-12">
         <div class="card">
           <div class="card-header">
-            <h4 class="card-title" id="basic-layout-form">Work List</h4>
+            <h4 class="card-title" id="basic-layout-form">{{ 'Home.WorkList' | translate}}</h4>
             <!-- <a class="heading-elements-toggle"><i class="fa fa-ellipsis-v font-medium-3"></i></a> -->
           </div>
           <div class="card-content collapse show">
@@ -58,27 +58,27 @@
                 <div class="col-sm-3 text-left">
                   <button type="button" class="btn btn-success" (click)="saveApprove()">
                     <i class="ft-check"></i>
-                    อนุมัติ
+                    {{ 'Home.Approve' | translate}}
                   </button>
                   <label>&nbsp;</label>
                   <button type="button" class="btn btn-danger" (click)="saveCancel()">
                     <i class="ft-x"></i>
-                    ยกเลิก
+                    {{ 'Home.Cancel' | translate}}
                   </button>
 
                 </div>
                 <div class="col-sm-9 text-left">
-                  <p-checkbox style="margin-left:20px" label="Wait for Admin" (onChange)="handleFilter($event,'2')"
-                    [value]="2" [(ngModel)]="filter_pending" binary="true">
+                  <p-checkbox style="margin-left:20px" label="{{ 'Home.WaitforAdmin' | translate}}"
+                    (onChange)="handleFilter($event,'2')" [value]="2" [(ngModel)]="filter_pending" binary="true">
                   </p-checkbox>
-                  <p-checkbox style="margin-left:20px" label="Wait for DP" (onChange)="handleFilter($event,'2')"
-                    [value]="2" [(ngModel)]="filter_wait_dp" binary="true">
+                  <p-checkbox style="margin-left:20px" label="{{ 'Home.WaitforDP' | translate}}"
+                    (onChange)="handleFilter($event,'2')" [value]="2" [(ngModel)]="filter_wait_dp" binary="true">
                   </p-checkbox>
-                  <p-checkbox style="margin-left:20px" label="Approved" (onChange)="handleFilter($event,'3')"
-                    [value]="3" [(ngModel)]="filter_approved" binary="true">
+                  <p-checkbox style="margin-left:20px" label="{{ 'Home.Approve' | translate}}"
+                    (onChange)="handleFilter($event,'3')" [value]="3" [(ngModel)]="filter_approved" binary="true">
                   </p-checkbox>
-                  <p-checkbox style="margin-left:20px" label="Cancel/Rejected" (onChange)="handleFilter($event,'4')"
-                    [value]="4" [(ngModel)]="filter_cancel" binary="true">
+                  <p-checkbox style="margin-left:20px" label="{{ 'Home.CancelOrRejected' | translate}}"
+                    (onChange)="handleFilter($event,'4')" [value]="4" [(ngModel)]="filter_cancel" binary="true">
                   </p-checkbox>
                 </div>
               </div>
@@ -93,48 +93,48 @@
                       <p-sortIcon [field]="'no'"></p-sortIcon>
                     </th> -->
                     <th class="text-center" [pSortableColumn]="'selection_sts'" pResizableColumn pReorderableColumn>
-                      เลือก
+                      {{ 'Home.Select' | translate}}
                       <p-sortIcon [field]="'selection_sts'"></p-sortIcon>
                     </th>
                     <th class="text-center" [pSortableColumn]="'booking_status'" pResizableColumn pReorderableColumn>
-                      สถานะ
+                      {{ 'Home.Status' | translate}}
                       <p-sortIcon [field]="'booking_status'"></p-sortIcon>
                     </th>
                     <th class="text-center" [pSortableColumn]="'booking_create'" pResizableColumn pReorderableColumn>
-                      วันที่สร้างรายการ
+                      {{ 'Home.CreateDate' | translate}}
                       <p-sortIcon [field]="'booking_create'"></p-sortIcon>
                     </th>
                     <th class="text-center" [pSortableColumn]="'booking_type'" pResizableColumn pReorderableColumn>
-                      ประเภท
+                      {{ 'Home.Type' | translate}}
                       <p-sortIcon [field]="'booking_type'"></p-sortIcon>
                     </th>
                     <th class="text-center" [pSortableColumn]="'booking_name'" pResizableColumn pReorderableColumn>
-                      รายการ
+                      {{ 'Home.List' | translate}}
                       <p-sortIcon [field]="'booking_name'"></p-sortIcon>
                     </th>
                     <th class="text-center" [pSortableColumn]="'create_by'" pResizableColumn pReorderableColumn>
-                      ผู้ร้องขอ
+                      {{ 'Home.Requester' | translate}}
                       <p-sortIcon [field]="'create_by'"></p-sortIcon>
                     </th>
                     <th class="text-center" [pSortableColumn]="'department'" pResizableColumn pReorderableColumn>
-                      แผนก
+                      {{ 'Home.Department' | translate}}
                       <p-sortIcon [field]="'department'"></p-sortIcon>
                     </th>
                     <th class="text-center" [pSortableColumn]="'booking_date'" pResizableColumn pReorderableColumn>
-                      วันที่ขอ
+                      {{ 'Home.RequestDate' | translate}}
                       <p-sortIcon [field]="'booking_date'"></p-sortIcon>
                     </th>
                     <th class="text-center" [pSortableColumn]="'booking_time'" pResizableColumn pReorderableColumn>
-                      เวลาช่วง
+                      {{ 'Home.IntervalTime' | translate}}
                       <p-sortIcon [field]="'booking_time'"></p-sortIcon>
                     </th>
 
                     <th class="text-center" [pSortableColumn]="'approve_by'" pResizableColumn pReorderableColumn>
-                      ผู้อนุมัติ
+                      {{ 'Home.Approver' | translate}}
                       <p-sortIcon [field]="'approve_by'"></p-sortIcon>
                     </th>
                     <th class="text-center" [pSortableColumn]="'reason'" pResizableColumn pReorderableColumn>
-                      เหตุผลที่ยกเลิก
+                      {{ 'Home.ReasonForCancel' | translate}}
                       <p-sortIcon [field]="'reason'"></p-sortIcon>
                     </th>
 
@@ -152,7 +152,6 @@
                     <col [style.width]="'150px'">
                     <col [style.width]="'150px'">
                     <col [style.width]="'150px'">
-
                     <col [style.width]="'180px'">
                     <col [style.width]="'200px'">
 
@@ -160,9 +159,6 @@
                 </ng-template>
                 <ng-template pTemplate="body" let-rowData let-columns="columns">
                   <tr [pSelectableRow]="rowData">
-                    <!-- <td class="text-center">
-                      {{ rowData['no'] }}
-                    </td> -->
                     <td class="text-center">
                       <p-checkbox [value]="rowData.tranId" [(ngModel)]="selectRoomList"
                         *ngIf="rowData.type == '1' && rowData.selection_sts == '1'">
@@ -210,7 +206,8 @@
                 <ng-template pTemplate="emptymessage" let-columns>
                   <tr>
                     <td [attr.colspan]="columns.length" class="text-center">
-                      No data available in table
+
+                      {{ 'Home.NoDataAvailableInTable' | translate}}
                     </td>
                   </tr>
                 </ng-template>
