--- a/src/app/components/maindata/news/news.component.html
+++ b/src/app/components/maindata/news/news.component.html
@@ -56,7 +56,7 @@
           <div class="card-header">
             <h4 class="card-title" id="basic-layout-form">Search results</h4>
             <div class="heading-elements mt-0">
-              <button type="button" class="btn btn-success" (click)="showModalDialogDetail('ADD', '', '', '', '', '')">
+              <button type="button" class="btn btn-success" (click)="showModalDialogDetail('ADD', '', '', '', '', '', '', '')">
                 <span class="d-md-block  ">
                   <i class="ft-plus"></i>
                   เพิ่มรายการ
@@ -127,7 +127,7 @@
                     </td>
                     <td class="text-center">
                       <a class="primary edit mr-1"
-                        (click)="showModalDialogDetail(rowData['id'], rowData['newsTypeId'], rowData['topic'], rowData['detail'], rowData['url'], rowData['urlVdo'])">
+                        (click)="showModalDialogDetail(rowData['id'], rowData['newsTypeId'], rowData['topic'], rowData['detail'], rowData['url'], rowData['urlVdo'], rowData['vdoFile'], rowData['vdoFileUrl'])">
                         <i class="fas fa-pencil-alt"></i>
                       </a>
                       <a class="danger delete mr-1" (click)="showModalDialogConfirmDelete(rowData['id'])">
